# gpiod-sysfs-proxy

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README  README.md  REUSE.toml  gpiod-sysfs-proxy  pyproject.toml  test.md
.github/workflows/: ci.yml
LICENSES/: MIT.txt
kas/: ci.yml
share/: gpiod-sysfs-proxy@.service  run-gpio-sys.mount  sys-class.mount
share/gpiod-sysfs-proxy@sys-class-gpio.service.d/: overlay.conf
tests/yocto/: gpiod-sysfs-proxy-tests.yml
tests/yocto/conf/: layer.conf
tests/yocto/recipes-kernel/linux/: linux-yocto_%.bbappend
tests/yocto/recipes-kernel/linux/files/: kernel-9pfs.cfg
