# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2024 Bartosz Golaszewski <bartosz.golaszewski@linaro.org>

[project]
name = "gpiod-sysfs-proxy"
version = "1.0.0"
description = "User-space compatibility layer for linux GPIO sysfs interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6.0"
dependencies = [
  "pyfuse3>=3.5.0",
  "trio>=0.22.0",
  "gpiod>=2.1.0",
  "pyudev>=0.24.0"
]
authors = [
  {name = "Bartosz Golaszewski", email = "brgl@bgdev.pl"},
]

[project.urls]
Homepage = "https://github.com/brgl/gpiod-sysfs-proxy"
Issues = "https://github.com/brgl/gpiod-sysfs-proxy/issues"
Changelog = "https://github.com/brgl/gpiod-sysfs-proxy/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = []

[tool.setuptools.data-files]
# Install the systemd template unit but do not enable any instance by default.
# The admin enables the mountpoint they want, e.g.:
#   systemctl enable --now gpiod-sysfs-proxy@run-gpio.service
#
# The .mount units provide the /sys/class overlay needed to expose
# /sys/class/gpio on kernels where the sysfs GPIO interface is disabled. They
# are inert until pulled in: only the sys-class-gpio instance requires them
# (via the drop-in below) and they carry ConditionPathExists=!/sys/class/gpio.
"lib/systemd/system" = [
  "share/gpiod-sysfs-proxy@.service",
  "share/run-gpio-sys.mount",
  "share/sys-class.mount",
]
"lib/systemd/system/gpiod-sysfs-proxy@sys-class-gpio.service.d" = [
  "share/gpiod-sysfs-proxy@sys-class-gpio.service.d/overlay.conf",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
